up entity